--- a/app/views/application_forms/new.html.erb
+++ b/app/views/application_forms/new.html.erb
@@ -9,8 +9,6 @@
 
 <%= form_for @application_form do |f| %>
 	<%= f.hidden_field :student_id %>
-	<%= f.fields_for :correction_course do |c| %>
-		<%= c.collection_select :application_form_id, CorrectionCourse.available,:id,:name%><br/>
-	<% end %>
+  <%= f.collection_select :correction_course, CorrectionCourse.available,:id,:name%><br/>
 	<%= f.submit %>
 <% end %>
