--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,11 @@
  *= require_tree .
  *= require_self
  */
+
+#main {
+  background-color: #FEE49D;
+  margin: 50px 200px;
+  padding: 0 20px;
+  border: 1px solid black;
+}
+
