--- a/app/assets/stylesheets/application_forms.scss
+++ b/app/assets/stylesheets/application_forms.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the ApplicationForms controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#application_form_header {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  h1 {
+    margin: 0 200px;
+  }
+}
