--- a/app/assets/stylesheets/application_forms.scss
+++ b/app/assets/stylesheets/application_forms.scss
@@ -10,3 +10,73 @@
     margin: 0 200px;
   }
 }
+
+.headline {
+	border-bottom: 2px solid black;
+	width: 70%;
+	padding-bottom: 10px;
+	margin: 40px 0;
+}
+
+.userData {
+	display: flex;
+	justify-content: space-evenly;
+}
+
+.singleUserInfo {
+	display: flex;
+	justify-content: flex-start;
+	margin-bottom: 20px;
+}
+
+.labelContent{
+	width: 140px;
+	margin-right: 5px;
+	font-weight: bold;
+}
+
+.infoContent {
+	border: 1px solid black;
+	width: 200px;
+	padding: 5px;
+	background-color: #DCDCDC;
+	border: 1px solid black;
+	
+}
+
+select{
+	padding: 10px;
+	width: 220px;
+}
+
+.navigatoryButtonSection {
+	margin: 50px 0;
+	display: flex;
+	justify-content: space-evenly;
+}
+
+.submitSectionButton {
+	width: 150px;
+	padding: 15px;
+}
+
+#dateAndClassroomSection{
+	display: flex;
+	justify-content: space-between;
+	margin-left: 20px;
+}
+
+.courseAndProfessorSection{
+	margin-left: 20px;
+}
+
+#dateSelect{
+	margin-right: 20%;
+}
+
+
+
+
+
+
+
