--- a/app/assets/stylesheets/student_actions.scss
+++ b/app/assets/stylesheets/student_actions.scss
@@ -1,3 +1,39 @@
 // Place all the styles related to the StudentActions controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+a {
+	text-decoration: none;
+	color: black;
+}
+.title{
+	text-align: center;
+	margin-bottom: 80px;
+
+}
+
+.headline {
+	border-bottom: 2px solid black;
+	width: 70%;
+	padding-bottom: 10px;
+}
+
+.buttonContainer {
+	display: flex;
+	justify-content: space-evenly;
+	width: 80%;
+	
+	margin-bottom: 30px;
+}
+
+.menuButton {
+	margin: 20px;
+	width: 200px;
+	height: 50px;
+	padding: 10px;
+	background-color: white;
+	border: 2px solid black;
+	
+}
+
+
