--- a/app/views/application_forms/new.html.erb
+++ b/app/views/application_forms/new.html.erb
@@ -1,25 +1,62 @@
 <header id='application_form_header'>
-  <h1>Podanie <%= application_form_number%></h1>
+  <h1>Podanie nr <%= application_form_number%></h1>
   <p><%= Date.today%>, Wrocław</p>
 </header>
-<h2>Dane studenta</h2>
-<p><strong>Numer Albumu:</strong> <%= student.id_number%></p>
-<p><strong>Imie:</strong> <%= student.first_name%></p>
-<p><strong>Nazwisko:</strong> <%= student.last_name%></p>
-<p><strong>E-mail:</strong> <%= student.email%></p>
-<p><strong>Płeć:</strong> <%= student.sex%></p>
+<h2 class="headline">Moje dane</h2>
+<div class="userData">
+  <div>
+    <div class="singleUserInfo">
+      <label class="labelContent">Numer Albumu</label>
+      <div class="infoContent"><%= student.id_number%></div>
+    </div>
+    <div class="singleUserInfo">
+      <label class="labelContent">Imie</label>
+      <div class="infoContent"><%= student.first_name%></div>
+    </div>
+    <div class="singleUserInfo">
+      <label class="labelContent">Nazwisko</label>
+      <div class="infoContent"><%= student.last_name%></div>
+    </div>
+  </div>
+  <div>
+    <div class="singleUserInfo">
+      <label class="labelContent">E-mail</label>
+      <div class="infoContent"><%= student.email%></div>
+    </div>
+    <div class="singleUserInfo">
+      <label class="labelContent">Płeć</label>
+      <div class="infoContent"><%= student.sex%></div>
+    </div>
+  </div>
+</div>
 
 <%= form_for @application_form, url: application_forms_path do |f| %>
 	<%= f.hidden_field :student_id %>
-  <h2>Nazwa Kursu:</h2>
-  <%= f.collection_select :correction_course, Course::CorrectionCourse.available,:id,:name, {include_blank: 'Wybierz kurs', locale: :pl}, {required: true}%><br/>
-  <h2>Prowadzacy:</h2>
-  <%= f.grouped_collection_select :professors, Course::CorrectionCourse.available, :professors, :name, :id, :full_name, {include_blank: 'Wybierz prowadzacego'} %>
-  <h2>Termin i Sala:</h2>
-  <%= f.collection_select :classrooms, Classroom::Classroom.all,:id,:full_name%><br/>
-  <%= f.grouped_collection_select :classroom_availabilities, Classroom::Classroom.all, :classroom_availabilities, :full_name, :id, :available_on %>
-  <br/>
-  <br/>
-	<%= f.submit 'Zloz podanie' %>
+  
+  <h2 class="headline">Nazwa Kursu:</h2>
+  <div class="courseAndProfessorSection">
+    <%= f.collection_select :correction_course,  Course::CorrectionCourse.available,:id,:name,{include_blank: 'Wybierz kurs', locale: :pl}, {required: true}%><br/>
+  </div>
+  
+  <h2 class="headline">Prowadzacy:</h2>
+  <div class="courseAndProfessorSection">
+    <%= f.grouped_collection_select :professors, Course::CorrectionCourse.available, :professors, :name, :id, :full_name, {include_blank: 'Wybierz prowadzacego'} %>
+  </div>
+
+  <h2 class="headline">Termin i Sala:</h2>
+  <div id="dateAndClassroomSection">
+    <div id="classroomSelect">
+      <%= f.collection_select :classrooms, Classroom::Classroom.all,:id,:full_name%><br/>
+    </div>
+    <div id="dateSelect">  
+      <%= f.grouped_collection_select :classroom_availabilities, Classroom::Classroom.all, :classroom_availabilities, :full_name, :id, :available_on %></div>
+    </div>
+
+  <div class="navigatoryButtonSection">
+      <%= f.submit class: 'submitSectionButton', value: 'Złóż podanie' %>
+      <button class='submitSectionButton'><%= link_to "Wróć", :back%></button>
+  </div>
+
+
 <% end %>
-<%= link_to "Wroc", :back%>
+
